# example_gtest

./: CMakeLists.txt
inc/: math.hpp  status.hpp
src/: math.cpp  status.cpp
test/: mathTest.cpp
